@@ -42,6 +42,7 @@
 -- "require", "require VERSION"
 -- "opendir", "readdir", "closedir", "select", "binmode"
 -- "vec"
+-- "localtime", "gmtime"
 -- tied hash
 -- tied array
 -- overload implemented for about half of the operators
